--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.11.0",
     "json-server": "^0.16.1",
