--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
@@ -20,7 +19,8 @@
     "react-recaptcha": "^2.3.10",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-testing-library": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +45,9 @@
     ]
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "@testing-library/react": "^9.5.0",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.13.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
