--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -8,7 +8,11 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.1",
     "firebase": "^7.11.0",
+    "formik": "^2.1.4",
+    "jest-dom": "^4.0.0",
     "json-server": "^0.16.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.0",
@@ -20,6 +24,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-test-render": "^1.1.2",
     "react-testing-library": "^8.0.1"
   },
   "scripts": {
@@ -45,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^10.0.1",
     "jest": "^25.1.0",
     "react-test-renderer": "^16.13.1"
   },
