--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-test-render": "^1.1.2",
-    "react-testing-library": "^8.0.1"
+    "react-testing-library": "^8.0.1",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
