--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "async-wait-until": "^1.2.4",
     "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.18.1",
     "babel7-jest": "^1.0.1",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "howler": "^2.1.3",
+    "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
