--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
     "babel7-jest": "^1.0.1",
+    "better-docs": "^1.4.7",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "howler": "^2.1.3",
+    "jsdoc": "^3.6.3",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -32,7 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "docs": "jsdoc -c jsdoc.conf.json"
   },
   "eslintConfig": {
     "extends": "react-app"
