💡 Add Functional documentation of the Home Page

--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "jsdoc": "^3.6.3",
     "json-server": "^0.16.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "jsdoc src -r -d docs"
   },
   "eslintConfig": {
     "extends": "react-app"
