--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -24,6 +24,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-sortable-hoc": "^1.11.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "socket.io-stream": "^0.9.1"
