--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -8,10 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "async-wait-until": "^1.2.4",
     "axios": "^0.19.2",
-    "axios-mock-adapter": "^1.18.1",
     "babel7-jest": "^1.0.1",
     "better-docs": "^1.4.7",
     "bootstrap": "^4.4.1",
+    "check-prop-types": "^1.1.2",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "howler": "^2.1.3",
@@ -54,8 +54,10 @@
     ]
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.18.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "jest-extended": "^0.11.5",
     "react-styleguidist": "^11.0.4",
     "react-test-renderer": "^16.13.1"
   },
