--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "sinon": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
