--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -27,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "docs": "jsdoc src -r -d docs"
+    "docs": "jsdoc src -r -d docs",
+    "json:server": "json-server homeMock.json --routes homeMockRoutes.json"
   },
   "eslintConfig": {
     "extends": "react-app"
