--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "firebase": "^7.11.0",
     "formik": "^2.1.4",
