--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -5,26 +5,24 @@
   "dependencies": {
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "jest": "24.9.0",
-    "prop-types": "^15.7.2",
     "@types/jest": "^25.1.4",
-    
-    
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    
-    "json-server": "^0.16.1",
+    "array-move": "^2.2.1",
     "async-wait-until": "^1.2.4",
     "axios": "^0.19.2",
     "babel7-jest": "^1.0.1",
     "better-docs": "^1.4.7",
     "bootstrap": "^4.4.1",
     "check-prop-types": "^1.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "howler": "^2.1.3",
+    "jest": "24.9.0",
     "jsdoc": "^3.6.3",
+    "json-server": "^0.16.1",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
@@ -33,19 +31,15 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-test-renderer": "^16.13.1",
     "react-sortable-hoc": "^1.11.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "socket.io-stream": "^0.9.1"
+    "react-test-renderer": "^16.13.1",
+    "sweetalert2": "^9.10.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
-    
-    
     "json:server": "json-server src/api/db.json --routes src/api/routes.json --port 2022",
     "eject": "react-scripts eject",
     "styleguide": "styleguidist server",
@@ -70,8 +64,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "check-prop-types": "^1.1.2",
-    
-    
     "jest-enzyme": "^7.1.2",
     "axios-mock-adapter": "^1.18.1",
     "enzyme": "^3.11.0",
