🛠 Setup environment variables for production vs development

--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -12,6 +12,7 @@
     "better-docs": "^1.4.7",
     "bootstrap": "^4.4.1",
     "check-prop-types": "^1.1.2",
+    "env-cmd": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
@@ -38,14 +39,14 @@
     "socket.io-stream": "^0.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "env-cmd -e  dev react-scripts start",
+    "build:dev": "env-cmd -e  dev react-scripts build",
+    "prod": "env-cmd -e  prod react-scripts start",
+    "build:prod": "env-cmd -e  prod react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
     "json:server": "json-server src/api/db.json --routes src/api/routes.json --port 2022",
     "eject": "react-scripts eject",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build",
     "docs": "jsdoc -c jsdoc.conf.json"
   },
   "eslintConfig": {
