--- a/oudfrontend/.env-cmdrc.json
+++ b/oudfrontend/.env-cmdrc.json
@@ -3,6 +3,6 @@
     "REACT_APP_BASE_URL": "http://localhost:2022"
   },
   "prod": {
-    "REACT_APP_BASE_URL": "http://oud-zerobase.me/api/v1"
+    "REACT_APP_BASE_URL": "https://oud-zerobase.me/api/v1"
   }
 }
