--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -1,43 +1,40 @@
 {
-  "name": "signup",
+  "name": "oudfrontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^10.0.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "firebase": "^7.11.0",
-    "formik": "^2.1.4",
-    "jest-dom": "^4.0.0",
-    "jest-enzyme": "^7.1.2",
-    "json-server": "^0.16.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "iso-3166-country-list": "^0.1.2",
+    "jsdoc": "^3.6.3",
     "jwt-decode": "^2.2.0",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-facebook-login": "^4.1.1",
-    "react-firebaseui": "^4.1.0",
-    "react-google-login": "^5.1.2",
     "react-recaptcha": "^2.3.10",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-test-render": "^1.1.2",
-    "react-testing-library": "^8.0.1",
-    "yup": "^0.28.3"
+    "react-test-renderer": "^16.13.1",
+    "router": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json:server": "json-server --watch db.json",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build",
-    "jssdoc": "jsdoc -c jsdoc.json"
+    "json:server": "json-server --watch db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,19 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/react": "^10.0.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^25.2.1",
-    "jsdoc": "^3.6.3",
-    "react-styleguidist": "^11.0.4",
-    "react-test-renderer": "^16.13.1",
-    "webpack": "^4.42.1"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
