--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "howler": "^2.1.3",
+    "iso-3166-country-list": "^0.1.2",
     "jest": "24.9.0",
     "jsdoc": "^3.6.3",
     "json-server": "^0.16.1",
