--- a/oudfrontend/package.json
+++ b/oudfrontend/package.json
@@ -17,30 +17,33 @@
     "better-docs": "^1.4.7",
     "bootstrap": "^4.4.1",
     "check-prop-types": "^1.1.2",
+    "copy-to-clipboard": "^3.3.1",
     "env-cmd": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jwt-decode": "^2.2.0",
-    "react-facebook-login": "^4.1.1",
-    "react-recaptcha": "^2.3.10",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "howler": "^2.1.3",
+    "iso-3166-country-list": "^0.1.2",
     "jest": "24.9.0",
     "jsdoc": "^3.6.3",
     "json-server": "^0.16.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qs": "^6.9.3",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-facebook-login": "^4.1.1",
     "react-player": "^1.15.2",
+    "react-recaptcha": "^2.3.10",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-sortable-hoc": "^1.11.0",
     "react-test-renderer": "^16.13.1",
+    "save": "^2.4.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "socket.io-stream": "^0.9.1"
