--- a/oudfrontend/.env-cmdrc.json
+++ b/oudfrontend/.env-cmdrc.json
@@ -1,10 +1,10 @@
 {
   "dev": {
     "REACT_APP_BASE_URL": "http://localhost:2022",
-    "MOCKING_MODE": true
+    "MOCKING_MODE": "true"
   },
   "prod": {
     "REACT_APP_BASE_URL": "https://oud-zerobase.me/api/v1",
-    "MOCKING_MODE": false
+    "MOCKING_MODE": "false"
   }
 }
